@@ -220,87 +220,6 @@ class FreezeFrameData (gtk.VBox, Plugin):
             self.app.device.disconnect(cb_id)
 
 
-
-class FreezeFrameDataView(GObject, StateMixin, UnitMixin, PropertyObject):
-    __gtype_name__ = 'FreezeFrameDataView'
-    
-    gproperty('name-widget', object)
-    gproperty('value-widget', object)
-    gproperty('units-widget', object)
-    gproperty('helper', object)
-    
-    def __init__(self, pid, index=0, units='Metric',
-                       name_widget=None, value_widget=None, 
-                       units_widget=None, helper=None):
-        GObject.__init__(self)
-        PropertyObject.__init__(self, name_widget=name_widget,
-                                      value_widget=value_widget,
-                                      units_widget=units_widget,
-                                      unit_standard=units,
-                                      helper=helper)
-
-        self.command = Sensor(pid, index)
-        self.command.connect('data-changed', self._data_changed_cb)
-
-                
-    def __post_init__(self):
-        self.connect('notify::unit-standard', self._notify_unit_standard_cb)
-        self.connect('notify::supported', self._notify_supported_cb)
-        self._update_view()
-        self._sensitize_widgets()
-    
-
-       
-    def _notify_active_cb(self, o, pspec):
-        if self._toggleable:
-            self.active_widget.set_active(self.active)
-        self._sensitize_widgets()
-        if not self.active:
-            self.command.clear()
-        self.emit('active-changed', self.active)
-        
-        
-    def  _notify_unit_standard_cb(self, o, pspec):
-        self._update_view()
-                
-                
-    def  _notify_supported_cb(self, o, pspec):
-        if not self.supported:
-            self.active = False
-        self._sensitize_widgets()
-    
-     
-    def _sensitize_widgets(self):
-        for widget in (self.name_widget, self.value_widget, self.units_widget):
-            if widget:
-                widget.set_sensitive(self.supported)
-            
-            
-    def _data_changed_cb(self, command, data):
-        self._update_view()
-       
-       
-    def _update_view(self):
-        if self.unit_standard == 'Imperial':
-            value = self.command.imperial_value
-            units = self.command.imperial_units
-        else:
-            value = self.command.metric_value
-            units = self.command.metric_units
-        if not units: units=''
-        if not value: value=''
-        if self.helper and callable(self.helper):
-            self.helper(self)
-        else:    
-            if self.name_widget:
-                self.name_widget.set_text(self.command.name)
-            if self.value_widget:
-                self.value_widget.set_text(value)
-            if self.units_widget:
-                self.units_widget.set_text(units)
-
- 
-
 def _dtc_code_helper(view):
     dtc = decode_dtc_code(view.command.metric_value)
     if not dtc:
