@@ -1,5 +1,11 @@
 2008-10-21  Ben Van Mechelen  <me@benvm.be>
 
+	* plugins/freeze_frame_data/freeze_frame_data.py:
+	    Remove obsolete FreezeFrameDataView class
+
+
+2008-10-21  Ben Van Mechelen  <me@benvm.be>
+
 	* configure.ac:
 	    bump version to 0.2.1
 	    
